kubernetes/base/db.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: postgres:15.2
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: postgres-data
          resources:
            requests:
              cpu: "100m"
              memory: "120Mi"
            limits:
              cpu: "400m"
              memory: "200Mi"
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data-v2
