kubernetes/base/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: frontend_image
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:  
                requests:
                  cpu: "200m"
                  memory: "650Mi"
                limits:
                  cpu: "500m"
                  memory: "1000Mi"
      imagePullSecrets:
        - name: regcred
