kubernetes/base/memcached.yaml
apiVersion: v1
kind: Service
metadata:
  name: memcached
spec:
  type: ClusterIP
  ports:
    - port: 11211
      targetPort: 11211
      protocol: TCP
      name: memcached
  selector:
    app: memcached

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memcached
  template:
    metadata:
      labels:
        app: memcached
    spec:
      containers:
      - name: memcached
        image: memcached:latest
        command:
          - memcached
        ports:
        - containerPort: 11211
          name: memcached
        resources:  
            requests:
              cpu: "100m"
              memory: "250Mi"
            limits:
              cpu: "500m"
              memory: "500Mi"
