kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/http2-max-field-size: "8192"
    nginx.ingress.kubernetes.io/http2-max-header-size: "16384"
    nginx.ingress.kubernetes.io/limit-connections: "15"
    nginx.ingress.kubernetes.io/limit-rpm: "10"
spec:
  tls:
  - hosts:
    - frontend.example.com
    - backend.example.com
    secretName: example-tls
  rules:
  - host: frontend.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port:
              number: 3000
  - host: backend.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backend
            port:
              number: 8000
